ecmascript/parser/tests/test262-error-references/fail/cf23f5d7f2364a44.js.stderr
error: Expression expected
 --> $DIR/tests/test262-parser/fail/cf23f5d7f2364a44.js:1:4
  |
1 | () + 1
  |    ^

